--- a/src/Components/TopBanner.module.css
+++ b/src/Components/TopBanner.module.css
@@ -7,8 +7,9 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     background-color: var(--secondary-color);
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .containerContent {
